# asl_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
asl_project/: baseline_model.py  callbacks.py  commands.py  data.py  datamodule.py  dataset.py  export.py  infer.py  inference.py  model.py  run_webcam.py  train.py  utils.py  web_service.py
configs/: config.yaml  inference.yaml  train.yaml
configs/data/: default.yaml
configs/model/: baseline.yaml  resnet.yaml
data/: ASL_Alphabet_Dataset.dvc
lightning_logs/version_0/: hparams.yaml  metrics.csv
